<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menu_create_data"
            android:icon="@drawable/ic_add_circle_black_24dp"
            android:title="@string/menu_create_data" />
        <item
            android:id="@+id/menu_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_quick_search" />
        <item
            android:id="@+id/menu_quick"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_quick_search" />
        <item
            android:id="@+id/menu_advanced"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_advanced_search" />
        <item
            android:id="@+id/menu_exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_exit" />
    </group>
</menu>