<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/card_padding">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_items_margin"
            android:text="@string/author_name"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text.22" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_items_margin"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text.18"
            tools:text="Ivanov A.A." />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_items_margin"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text.22"
            android:text="@string/birth"/>

        <TextView
            android:id="@+id/tv_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_items_margin"
            android:text="@string/not_specified"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text.20" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_items_margin"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text.22"
            android:text="@string/organization"/>

        <TextView
            android:id="@+id/tv_org"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_items_margin"
            android:text="@string/not_data"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text.20" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_items_margin"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text.22"
            android:text="@string/bio"/>

        <TextView
            android:id="@+id/tv_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_items_margin"
            android:text="@string/not_filled"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text.20" />


    </LinearLayout>


</LinearLayout>