<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_simple_chs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/child_margin_top"
            android:textSize="@dimen/text.24"
            android:text="@string/tv_simple_chs"
            android:textColor="@color/primary_text" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_name_simple_chs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_simple_chs"
            android:layout_marginTop="@dimen/child_margin_top">

            <EditText
                android:id="@+id/et_simple_chs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_simple_chs"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_next_simple_chs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ti_name_simple_chs"
            android:layout_marginTop="@dimen/child_margin_top"
            android:text="@string/next" />


    </RelativeLayout>
</LinearLayout>

